--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.plugin-container *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 .plugin-container{
     width: auto;
     margin:auto 18%;
@@ -12,4 +18,8 @@
 .book-card{
     padding: 1rem;
     border:1px solid #111!important;
+}
+
+.book-card *{
+    font-family:sans-serif;
 }
