--- a/style.css
+++ b/style.css
@@ -18,8 +18,19 @@
 .book-card{
     padding: 1rem;
     border:1px solid #111!important;
+    min-height: 20vw;
+    display: grid;
+    grid-template-rows: repeat(3,auto);
 }
 
 .book-card *{
     font-family:sans-serif;
+}
+
+.book-card h1{
+    font-size: 2.6vw;
+}
+
+.book-card p{
+    font-size: 1vw;
 }
